Interfaz de registro

--- a/src/main/resources/static/templates/principal.html
+++ b/src/main/resources/static/templates/principal.html
@@ -16,7 +16,7 @@
                     <li class="active"><a href="#home" class="smothscroll">Home</a></li>
   		            <li><a href="#desc" class="smothscroll">Descripci&oacuten</a></li>
   		            <li><a href="#cita" class="smothScroll">Citas</a></li>
-                    <li><a href="#showcase" class="smothScroll">Centros médicos</a></li>
+                    <li><a href="#showcase" class="smothScroll">Centros m&eacutedicos</a></li>
   		            <li><a href="#frec" class="smothScroll">Preguntas frecuentes</a></li>
                    
                     <li><a href="#registro" class="smothScroll">Mi NoInsane</a></li>
@@ -47,8 +47,8 @@
 	    		<div class="col-lg-2">
 	    			<br>
 	    			<img class="hidden-xs hidden-sm hidden-md" src="assets/img/arrow2.png">
-	    			<h5>Médicos y centros</h5>
-	    			<p>Encuentra tu hospital y médico especialista mas cercano</p>
+	    			<h5>M&eacutedicos y centros</h5>
+	    			<p>Encuentra tu hospital y m&eacutedico especialista mas cercano</p>
 	    		</div>
 	    	</div>
 	    </div> <!--/ .container -->
@@ -109,8 +109,8 @@
 		                    </div><!-- /accordion-heading -->
 		                    <div id="collapseOne" class="accordion-body collapse in">
 		                        <div class="accordion-inner">
-								<p>Consulte las formas de obtener cita previa en Atención Primaria. 
-                                    Desde esta página puede pedir, consultar, cambiar o anular su cita con el médico de Familia,
+								<p>Consulte las formas de obtener cita previa en Atenci&oacuten Primaria. 
+                                    Desde esta p&aacutegina puede pedir, consultar, cambiar o anular su cita con el m&eacutedico de Familia,
                                     Pediatra o profesional de Enfermería.</p>
 								</div><!-- /accordion-inner -->
 		                    </div><!-- /collapse -->
@@ -126,9 +126,9 @@
 		                    <div id="collapseTwo" class="accordion-body collapse">
 		                        <div class="accordion-inner">
 								<p>Consulte las formas de obtener cita previa en Atención Especializada.
-                                    Desde esta página puede pedir, consultar, cambiar o anular su cita con el Especialista solicitada
-                                    por su médico de Atención Primaria, con la posibilidad de elegir otro centro sanitario 
-                                    y médico Especialista.</p>
+                                    Desde esta p&aacutegina puede pedir, consultar, cambiar o anular su cita con el Especialista solicitada
+                                    por su m&eacutedico de Atenci&oacuten Primaria, con la posibilidad de elegir otro centro sanitario 
+                                    y m&eacutedico Especialista.</p>
 								</div><!-- /accordion-inner -->
 		                    </div><!-- /collapse -->
 		                </div><!-- /accordion-group -->
@@ -149,7 +149,7 @@
 	<div id="showcase">
 		<div class="container">
 			<div class="row">
-				<h1 class="centered">Centros médicos</h1>
+				<h1 class="centered">Centros m&eacutedicos</h1>
 				<br>
 				<div class="col-lg-8 col-lg-offset-2">
 					<div id="carousel-example-generic" class="carousel slide">
@@ -201,8 +201,8 @@
 		                    </div><!-- /accordion-heading -->
 		                 
 		                        <div class="accordion-inner">
-								<p>SÍ. Desde este servicio web también se puede cambiar 
-		una cita  a través de la opción de 'Cambiar cita'.</p>
+								<p>S&Iacute. Desde este servicio web también se puede cambiar 
+		una cita  a trav&eacutes de la opci&oacuten de 'Cambiar cita'.</p>
 								</div><!-- /accordion-inner -->
 		                   
 		                </div><!-- /accordion-group -->
@@ -211,13 +211,13 @@
 		                <div class="accordion-group">
 		                    <div class="accordion-heading">
 		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		                        ¿Cómo puedo anular una cita?
+		                        ¿C&oacutemo puedo anular una cita?
 		                        </a>
 		                    </div>
 		                  
 		                        <div class="accordion-inner">
-								<p>Se puede anular desde la opción 'Cambiar o Anular',
-		  o bien a través de la llamada al teléfono de contacto del centro de salud.</p>
+								<p>Se puede anular desde la opci&oacuten 'Cambiar o Anular',
+		  o bien a trav&eacutes de la llamada al tel&eacutefono de contacto del centro de salud.</p>
 								</div><!-- /accordion-inner -->
 		                    
 		                </div><!-- /accordion-group -->
@@ -237,40 +237,36 @@
 	<div id="footerwrap">
 		<div class="container">
 			<div class="col-lg-5">
-				<h3>Address</h3>
+				<h3>¿A&uacuten no te has registrado en NoInsane?</h3>
 				<p>
-				Av. Greenville 987,<br/>
-				New York,<br/>
-				90873<br/>
-				United States
+				Si eres cliente de NoInsane<br/>
+				Entra y disfruta<br/>
+				de nuestras ventajas<br/>
+				
 				</p>
 			</div>
 			
 			<div class="col-lg-7">
-				<h3>Drop Us A Line</h3>
+				<h3>Entra con tu cuenta</h3>
 				<br>
 				<form role="form" action="#" method="post" enctype="plain"> 
 				  <div class="form-group">
-				    <label for="name1">Your Name</label>
+				    <label for="name1">Tu DNI</label>
 				    <input type="name" name="Name" class="form-control" id="name1" placeholder="Your Name">
 				  </div>
 				  <div class="form-group">
-				    <label for="email1">Email address</label>
+				    <label for="email1">Contrase&ntildea</label>
 				    <input type="email" name="Mail" class="form-control" id="email1" placeholder="Enter email">
 				  </div>
-				  <div class="form-group">
-				  	<label>Your Text</label>
-				  	<textarea class="form-control" name="Message" rows="3"></textarea>
-				  </div>
 				  <br>
-				  <button type="submit" class="btn btn-large btn-success">SUBMIT</button>
+				  <button type="submit" class="btn btn-large btn-success">ENTRAR</button>
 				</form>
 			</div>
 		</div>
 	</div>
 	<div id="c">
 		<div class="container">
-			<p>Created by <a href="http://www.blacktie.co">BLACKTIE.CO</a></p>
+			<p>Created by <a href="http://www.blacktie.co">Cruz Héctor Fernández, Ignacio de Lucas, Hugo Fernández</a></p>
 		
 		</div>
 	</div>
