--- a/src/main/resources/static/templates/registro.html
+++ b/src/main/resources/static/templates/registro.html
@@ -28,40 +28,34 @@
 	<div id="footerwrap">
 		<div class="container">
 			<div class="col-lg-5">
-				<h3>Address</h3>
+				<h3>¿A&uacuten no te has registrado en NoInsane?</h3>
 				<p>
-				Av. Greenville 987,<br/>
-				New York,<br/>
-				90873<br/>
-				United States
-				</p>
+				Si eres cliente de NoInsane<br/>
+				Entra y disfruta<br/>
+				de nuestras ventajas<br/>
 			</div>
 			
 			<div class="col-lg-7">
-				<h3>Drop Us A Line</h3>
+				<h3>Entra con tu cuenta</h3>
 				<br>
 				<form role="form" action="#" method="post" enctype="plain"> 
 				  <div class="form-group">
-				    <label for="name1">Your Name</label>
-				    <input type="name" name="Name" class="form-control" id="name1" placeholder="Your Name">
+				    <label for="name1">Tu DNI:</label>
+				    <input type="DNI" name="DNI" class="form-control" id="name1" placeholder="Tu DNI">
 				  </div>
 				  <div class="form-group">
-				    <label for="email1">Email address</label>
-				    <input type="email" name="Mail" class="form-control" id="email1" placeholder="Enter email">
-				  </div>
-				  <div class="form-group">
-				  	<label>Your Text</label>
-				  	<textarea class="form-control" name="Message" rows="3"></textarea>
+				    <label for="email1">Contrase&ntildea:</label>
+				    <input type="pass" name="pass" class="form-control" id="email1" placeholder="Introduce pass">
 				  </div>
 				  <br>
-				  <button type="submit" class="btn btn-large btn-success">SUBMIT</button>
+				  <button type="submit" class="btn btn-large btn-success">ENTRAR</button>
 				</form>
 			</div>
 		</div>
 	</div>
 	<div id="c">
 		<div class="container">
-			<p>Created by <a href="http://www.blacktie.co">BLACKTIE.CO</a></p>
+			<p>Created by <a href="http://www.blacktie.co">Cruz Héctor Fernández, Ignacio de Lucas, Hugo Fernández</a></p>
 		
 		</div>
 	</div>
