--- a/src/main/resources/static/templates/principal.html
+++ b/src/main/resources/static/templates/principal.html
@@ -14,12 +14,12 @@
 	          
                 <ul class="nav nav-tabs">
                     <li class="active"><a href="#home" class="smothscroll">Home</a></li>
-  		            <li><a href="#desc" class="smothscroll">Descripci&oacuten</a></li>
-  		            <li><a href="#cita" class="smothScroll">Citas</a></li>
-                    <li><a href="#showcase" class="smothScroll">Centros médicos</a></li>
-  		            <li><a href="#frec" class="smothScroll">Preguntas frecuentes</a></li>
+  		            <li><a ng-href="#desc" class="smothscroll">Descripci&oacuten</a></li>
+  		            <li><a ng-href="#cita" class="smothScroll">Citas</a></li>
+                    <li><a ng-href="#showcase" class="smothScroll">Centros mï¿½dicos</a></li>
+  		            <li><a ng-href="#frec" class="smothScroll">Preguntas frecuentes</a></li>
                    
-                    <li><a href="#registro" class="smothScroll">Mi NoInsane</a></li>
+                    <li><a ng-href="#registro" class="smothScroll">Mi NoInsane</a></li>
   		
 	        </div><!--/.nav-collapse -->
 	      </div>
@@ -47,8 +47,8 @@
 	    		<div class="col-lg-2">
 	    			<br>
 	    			<img class="hidden-xs hidden-sm hidden-md" src="assets/img/arrow2.png">
-	    			<h5>Médicos y centros</h5>
-	    			<p>Encuentra tu hospital y médico especialista mas cercano</p>
+	    			<h5>Mï¿½dicos y centros</h5>
+	    			<p>Encuentra tu hospital y mï¿½dico especialista mas cercano</p>
 	    		</div>
 	    	</div>
 	    </div> <!--/ .container -->
@@ -89,7 +89,7 @@
 	<div id="features">
 		<div class="container">
 			<div class="row">
-				<h1 class="centered">¿Quieres cita?</h1>
+				<h1 class="centered">ï¿½Quieres cita?</h1>
 				<br>
 				<br>
 				<div class="col-lg-6 centered">
@@ -109,9 +109,9 @@
 		                    </div><!-- /accordion-heading -->
 		                    <div id="collapseOne" class="accordion-body collapse in">
 		                        <div class="accordion-inner">
-								<p>Consulte las formas de obtener cita previa en Atención Primaria. 
-                                    Desde esta página puede pedir, consultar, cambiar o anular su cita con el médico de Familia,
-                                    Pediatra o profesional de Enfermería.</p>
+								<p>Consulte las formas de obtener cita previa en Atenciï¿½n Primaria. 
+                                    Desde esta pï¿½gina puede pedir, consultar, cambiar o anular su cita con el mï¿½dico de Familia,
+                                    Pediatra o profesional de Enfermerï¿½a.</p>
 								</div><!-- /accordion-inner -->
 		                    </div><!-- /collapse -->
 		                </div><!-- /accordion-group -->
@@ -125,10 +125,10 @@
 		                    </div>
 		                    <div id="collapseTwo" class="accordion-body collapse">
 		                        <div class="accordion-inner">
-								<p>Consulte las formas de obtener cita previa en Atención Especializada.
-                                    Desde esta página puede pedir, consultar, cambiar o anular su cita con el Especialista solicitada
-                                    por su médico de Atención Primaria, con la posibilidad de elegir otro centro sanitario 
-                                    y médico Especialista.</p>
+								<p>Consulte las formas de obtener cita previa en Atenciï¿½n Especializada.
+                                    Desde esta pï¿½gina puede pedir, consultar, cambiar o anular su cita con el Especialista solicitada
+                                    por su mï¿½dico de Atenciï¿½n Primaria, con la posibilidad de elegir otro centro sanitario 
+                                    y mï¿½dico Especialista.</p>
 								</div><!-- /accordion-inner -->
 		                    </div><!-- /collapse -->
 		                </div><!-- /accordion-group -->
@@ -149,7 +149,7 @@
 	<div id="showcase">
 		<div class="container">
 			<div class="row">
-				<h1 class="centered">Centros médicos</h1>
+				<h1 class="centered">Centros mï¿½dicos</h1>
 				<br>
 				<div class="col-lg-8 col-lg-offset-2">
 					<div id="carousel-example-generic" class="carousel slide">
@@ -196,13 +196,13 @@
 		                <div class="accordion-group">
 		                    <div class="accordion-heading">
 		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		                        ¿Puedo modificar una cita ya confirmada para cambiar la fecha de consulta?
+		                        ï¿½Puedo modificar una cita ya confirmada para cambiar la fecha de consulta?
 		                        </a>
 		                    </div><!-- /accordion-heading -->
 		                 
 		                        <div class="accordion-inner">
-								<p>SÍ. Desde este servicio web también se puede cambiar 
-		una cita  a través de la opción de 'Cambiar cita'.</p>
+								<p>Sï¿½. Desde este servicio web tambiï¿½n se puede cambiar 
+		una cita  a travï¿½s de la opciï¿½n de 'Cambiar cita'.</p>
 								</div><!-- /accordion-inner -->
 		                   
 		                </div><!-- /accordion-group -->
@@ -211,13 +211,13 @@
 		                <div class="accordion-group">
 		                    <div class="accordion-heading">
 		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		                        ¿Cómo puedo anular una cita?
+		                        ï¿½Cï¿½mo puedo anular una cita?
 		                        </a>
 		                    </div>
 		                  
 		                        <div class="accordion-inner">
-								<p>Se puede anular desde la opción 'Cambiar o Anular',
-		  o bien a través de la llamada al teléfono de contacto del centro de salud.</p>
+								<p>Se puede anular desde la opciï¿½n 'Cambiar o Anular',
+		  o bien a travï¿½s de la llamada al telï¿½fono de contacto del centro de salud.</p>
 								</div><!-- /accordion-inner -->
 		                    
 		                </div><!-- /accordion-group -->
